<resources>
    <string name="app_name">homework9</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Forecast Search</string>
    <string name="main_label_street">Street</string>
    <string name="main_label_city">City</string>
    <string name="main_label_state">State</string>
    <string name="main_label_degree">Degree</string>
    <string name="main_label_logo1">Powered By:</string>
    <string name="main_label_logo2">FORECAST.IO</string>
    <string name="main_radio_fahrenheit">Fahrenheit</string>
    <string name="main_radio_celsius">Celsius</string>
    <string name="main_button_submit">Search</string>
    <string name="main_button_reset">Clear</string>
    <string name="main_button_about">About</string>
    <string name="main_spinner_default">Select</string>
    <string name="about_title">WeatherApp</string>
    <string name="about_image_description">author</string>
    <string name="about_name">Name: Chengxi Shi</string>
    <string name="about_stuid">Student Id: 2026129092</string>
    <string-array name="main_spinner_array">
        <item>Select</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>District of Columbia</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="title_activity_about">AboutActivity</string>
</resources>
