<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_forecast" tools:context=".forecast"
    android:background="@drawable/bg">
    <!--android:background="@drawable/img/bg.jpg"-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/main_title"
        android:id="@+id/textView_title"
        android:layout_marginTop="17dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_label_street"
        android:id="@+id/textView_street"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/textView_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_label_city"
        android:id="@+id/textView_city"
        android:layout_below="@+id/editText_street"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_label_state"
        android:id="@+id/textView_state"
        android:layout_below="@+id/editText_city"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_label_degree"
        android:id="@+id/textView_degree"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/textView_state"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_street"
        android:layout_alignTop="@+id/textView_street"
        android:layout_alignLeft="@+id/textView_title"
        android:layout_alignStart="@+id/textView_title"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText_city"
        android:layout_alignTop="@+id/textView_city"
        android:layout_alignLeft="@+id/editText_street"
        android:layout_alignStart="@+id/editText_street"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_degree"
        android:layout_alignBottom="@+id/textView_degree"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/editText_city"
        android:layout_alignStart="@+id/editText_city"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_radio_fahrenheit"
            android:id="@+id/radioButton_fahrenheit"
            android:layout_gravity="start"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_radio_celsius"
            android:id="@+id/radioButton_celsius"
            android:layout_gravity="end"
            android:checked="false"/>




    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_state"
        android:layout_alignLeft="@+id/editText_city"
        android:layout_alignStart="@+id/editText_city"
        android:layout_alignTop="@+id/textView_state"
        android:layout_above="@+id/textView_degree"
        android:entries="@array/main_spinner_array"
        android:prompt="@string/main_spinner_default"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_submit"
        android:id="@+id/button_submit"
        android:layout_below="@+id/textView_degree"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_reset"
        android:id="@+id/button_reset"
        android:layout_alignTop="@+id/button_submit"
        android:layout_toRightOf="@+id/button_submit"
        android:layout_toEndOf="@+id/button_submit"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_button_about"
        android:id="@+id/button_about"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:textAllCaps="false"
        android:background="@color/colorGrey"
        android:alpha="0.8"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorRed"
        android:id="@+id/textView_error"
        android:layout_below="@+id/button_reset"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/main_label_logo1"
        android:id="@+id/textView_logo1"
        android:layout_alignTop="@+id/button_about"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/main_label_logo2"
        android:id="@+id/textView_logo2"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/button_about"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <!--android:layout_alignEnd="@+id/textView_degree"-->

</RelativeLayout>
